--- a/src/app/partials/board/board.component.scss
+++ b/src/app/partials/board/board.component.scss
@@ -72,6 +72,85 @@
   /* Z-index para que la ficha esté por encima del tablero */
   z-index: 1;
   animation: ease-in-out;
-  transition: left 3s, top 3s; /* Definimos la transición para left y top */
   background-color: #000; /* Color de la ficha (rojo en este caso) */
+  box-sizing: border-box;
+  border: solid 1px;
+
+  &.onTurn {
+    animation: onTurn 1s infinite ease-in-out;
+  }
+}
+
+#countdown-container {
+  position: fixed;
+
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  background-color: #17202a;
+  z-index: 2;
+
+  overflow: hidden;
+
+  display: none;
+
+  .countdown {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 240px;
+    overflow: hidden;
+  }
+
+  .startingGameTitle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 24px;
+    overflow: hidden;
+  }
+}
+
+.versus-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .opponent {
+    text-align: center;
+    margin: 0 20px;
+  }
+
+  .opponent h2 {
+    font-size: 24px;
+  }
+
+  .opponent .name {
+    font-weight: bold;
+  }
+
+  .versus h1 {
+    font-size: 36px;
+    margin: 0;
+  }
+}
+
+#dialog_settings {
+  background-color: transparent;
+}
+
+// Animaciones
+@keyframes onTurn {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
